# unitysvc-core

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/unitysvc_core/: __init__.py  utils.py  validator.py
src/unitysvc_core/models/: __init__.py  base.py  documents.py  listing_data.py  listing_v1.py  offering_data.py  offering_v1.py  pricing.py  promotion_data.py  provider_data.py  provider_v1.py  service.py  service_group_data.py  subscription_plan_v1.py  validators.py
src/unitysvc_core/schema/: README.md  listing_v1.json  offering_v1.json  service_group_v1.json  subscription_plan_v1.json
tests/: __init__.py  test_pricing.py  test_service_group.py  test_subscription_plan.py  test_utils.py  test_validator.py
tests/example_data/: README.md
tests/example_data/provider1/services/service1/: offering.toml
