[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unitysvc-core"
version = "0.1.4"
description = "Shared data models and validation helpers for UnitySVC packages"
readme = "README.md"
authors = [{ name = "Bo Peng", email = "bo.peng@unitysvc.com" }]
maintainers = [{ name = "Bo Peng", email = "bo.peng@unitysvc.com" }]
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2",
  "email-validator",
  "jsonschema",
  "jinja2",
  "json5",
  "tomli-w",
  # Default preset functions exposed under $doc_preset / $file_preset
  # sentinels that load_data_file expands transparently after parse +
  # override-merge. Consumers that don't want expansion can pass
  # preset_fns=None to load_data_file.
  "unitysvc-data>=0.1.3",
]
requires-python = ">= 3.11"

[project.optional-dependencies]
test = [
  "coverage",
  "pytest",
  "ruff",
  "mypy",
]
dev = [
  "coverage",
  "pytest",
  "ruff",
  "ty",
  "ipdb",
]

[project.urls]
bugs = "https://github.com/unitysvc/unitysvc-core/issues"
homepage = "https://github.com/unitysvc/unitysvc-core"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # Pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]
ignore = [
  "B904",
]

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = false
disable_error_code = ["import-untyped"]

[tool.uv]
package = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
unitysvc_core = ["schema/*.json", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
